test/app/invalid-plugin-booter/config/sandbox.js
module.exports = {
  application: {
    "host": "0.0.0.0",
    "port": 17790,
    "verbose": true
  },
  plugins: {
    "pluginInvalidBooter": {
      "host": "0.0.0.0",
      "port": 17791,
      "verbose": true
    }
  }
};
